--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,9 @@
         <li class="menu">Contact us</li>
         {% if request.user.is_authenticated %}
 
-                {% comment %} <li class="nav-item mx-3">
-                  <a class="btn btn-danger" href="{% url 'user_logout' %}">Logout</a>
-                </li> {% endcomment %}
+                <li class="nav-item mx-3">
+                  <a class="btn btn-danger" href="">Logout</a>
+                </li>
 
         {% else %}
 
